--- a/task.properties
+++ b/task.properties
@@ -1,9 +1,9 @@
 - use config.ini for credential
 - alert bootsrap if success
-- change function css / js 
+- change function css / js  ... done
 - login auth using composer
-- get data settings value if exist using function getData('val'); .. progress
-- js form validations on submit each form (''); ... progress
+- get data settings value if exist using function getData('val'); .. done
+- js form validations on submit each form (''); ... done
 
 
 
