add sweet alert , update status , remove file

--- a/task.properties
+++ b/task.properties
@@ -1,8 +1,9 @@
+
+- login auth using composer  ... 'progress'
 - use config.ini for credential ;... done
-- ignore config.ini ... 'progress'
-- alert bootsrap if success ... 'progress'
+- ignore config.ini ... ;'done'
+- alert bootsrap if success ... ;'done'
 - append html result with style ... ;done
 - change function css / js  ... ;done
-- login auth using composer  ... 'progress'
 - get data settings value if exist using function getData('val') ... ;done
 - js form validations on submit each form  ...  ;done
