--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "symfony/http-foundation": "^6.0",
+        "jasongrimes/paginator": "^1.0",
         "illuminate/database": "^8.0"
     }
 }
