--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "symfony/http-foundation": "^6.0",
+        "gumlet/php-image-resize": "2.0.*",
         "illuminate/database": "^8.0"
     }
 }
